Adds user settings view and associated controller routes

--- a/app/views/weather_reports/new.html.erb
+++ b/app/views/weather_reports/new.html.erb
@@ -29,7 +29,7 @@
   </p>
 
   <p>
-    <label for="city">city</label>
+    <label for="city">City</label>
     <select name="weather_report[city_id]" id="city">
       <% @cities.each do |city| %>
         <option
