--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,17 @@
 <body>
 
   <p>params: <%= params %></p>
-  <p>errors: <%= flash[:errors] %></p>
+  <%= "<p>errors: #{flash[:errors]} </p>".html_safe if flash[:errors] %>
+  <%= "<p>notice: #{flash[:notice]} </p>".html_safe if flash[:notice] %>
 
-
+  <p>
+    <% if signed_in? %>
+      Currently logged in as: <%= link_to current_user.user_name, edit_user_url(current_user) %>
+      <%= button_to "Sign Out", session_url, method: :delete %>
+    <% else %>
+      <%= link_to "Sign In", new_session_url %> or <%= link_to "Sign Up", new_user_url %>
+    <% end %>
+  </p>
 
 
 <%= yield %>
