Adds partial for city's current weather and user show page for testing associations

--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -47,3 +47,7 @@
 <p>
   <%= link_to "New Report for #{@city.name}", @new_report_for_city_url %>
 </p>
+
+<p>
+  <%= link_to "Cities Index", cities_url %>
+</p>
