Adds avatars to user with Paperclip, Figaro, & AWS-S3. Fixes bug favoritecitylinks destroy method.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <h1>Welcome, <%= @user.user_name %></h1>
 
+<%= image_tag @user.try(:avatar).try(:url, :full) %>
+
 <p>
   Your favorite cities:
   <ul>
