--- a/app/views/users/_details.html.erb
+++ b/app/views/users/_details.html.erb
@@ -1,7 +1,7 @@
 <!-- app/views/users/_details.html.erb -->
 <% action_url = (mode == :new ? users_url : user_url(@user)) %>
 
-<form action="<%= action_url %>" method="post">
+<form action="<%= action_url %>" method="post" enctype="multipart/form-data">
   <%= change_post_to_put if mode == :edit %>
 
   <%= insert_form_authenticity_token %>
@@ -57,6 +57,18 @@
     <textarea name="user[bio]" id="bio" rows="4" cols="35"><%= @user.try(:bio) %></textarea>
     <br>
     <label for="bio">(140 characters max)</label>
+  </p>
+
+  <p>
+    <label for="avatar">Avatar</label>
+    <br>
+    <%= image_tag @user.try(:avatar).try(:url, :full) %>
+    <br>
+    <input
+      type="file"
+      name="user[avatar]"
+      value=""
+      id="avatar">
   </p>
 
   <p>
