--- a/app/views/users/_details.html.erb
+++ b/app/views/users/_details.html.erb
@@ -54,7 +54,7 @@
   <p>
     <label for="bio">Bio:</label>
     <br>
-    <textarea name="user[bio]" id="bio" rows="4" cols="35"><%= @user.try(:bio) %></textarea>
+    <textarea name="user[bio]" id="bio"><%= @user.try(:bio) %></textarea>
     <br>
     <label for="bio">(140 characters max)</label>
   </p>
