--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -17,3 +17,10 @@
 <p>
   <!-- comment box goes here -->
 </p>
+
+
+<p>
+  <%= link_to "Edit Photo", edit_photo_url(@photo) if @photo.submitter == current_user%>
+  <br>
+  <%= button_to "Delete Photo", photo_url(@photo), method: :delete if @photo.submitter == current_user%>
+</p>
