Adds comments to photos, including model, controller, and additions to photo new & show pages

--- a/app/views/users/_details.html.erb
+++ b/app/views/users/_details.html.erb
@@ -18,7 +18,7 @@
   <p>
     <label for="email">Email</label>
     <input
-      type="text"
+      type="email"
       name="user[email]"
       value="<%= @user.try(:email) %>"
       id="email">
