--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -15,7 +15,24 @@
 </p>
 
 <p>
-  <!-- comment box goes here -->
+  <ul>
+    <% @photo.comments.each do |comment| %>
+    <li>
+      <%= comment.author.user_name %>: <%= comment.body %>
+      <%= button_to "Delete", photo_comment_url(@photo, comment), method: :delete if current_user_can_delete?(comment) %>
+    </li>
+    <% end %>
+  </ul>
+
+  <form action="<%= photo_comments_url(@photo) %>" method="post">
+    <%= insert_form_authenticity_token %>
+    <p>
+      <label for="comment">Add a Comment:</label>
+      <textarea name="comment[body]" id="comment"></textarea>
+    </p>
+
+    <p><input type="submit" value="Post"></p>
+  </form>
 </p>
 
 
