--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,3 +17,10 @@
     <% end %>
   </ul>
 </p>
+
+<section class="recent-photos">
+  <h2 class="section-title">Latest Photos</h2>
+  <%= render "photos/last_four_photos", photos: @user.photos %>
+</section>
+
+</section>
