--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -11,7 +11,12 @@
 </p>
 
 <p>
-  <!-- tags go here -->
+  Tags
+  <ul>
+    <% @photo.tags.each do |tag| %>
+      <li><%= tag.body %></li>
+    <% end %>
+  </ul>
 </p>
 
 <p>
