--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,13 @@
 </head>
 <body>
 
-  <p>params: <%= params %></p>
-  <p>session: <%= session %></p>
+  <!-- <p>params: <%#= params %></p>
+  <p>session: <%#= session %></p> -->
 
   <%= "<p>errors: #{flash[:errors]} </p>".html_safe if flash[:errors] %>
   <%= "<p>notice: #{flash[:notice]} </p>".html_safe if flash[:notice] %>
 
-  <p>
+  <!-- <p>
     <% if signed_in? %>
       Currently logged in as:
       <br>
@@ -27,7 +27,7 @@
     <% else %>
       <%= link_to "Sign In", new_session_url %> or <%= link_to "Sign Up", new_user_url %>
     <% end %>
-  </p>
+  </p> -->
 
 
 <%= yield %>
