Implements layouts for all the views, including standard toolbar+columns

--- a/app/views/cities/_city_picker.html.erb
+++ b/app/views/cities/_city_picker.html.erb
@@ -1,4 +1,4 @@
-<h2>Get the weather!</h2>
+<h2 class="section-title">Get the weather!</h2>
 <ul>
   <% cities.each do |city| %>
     <li><%= link_to city.name, city_url(city) %></li>
