--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,10 +1,12 @@
 <!-- /app/views/cities/index.html.erb -->
 
-<div class="content">
+<div class="content cities-index">
 
 <header>
   <section class="logo-and-tagline">
-    <%= image_tag "http://placehold.it/350x150&text=Logo" %>
+    <a href="<%= root_url %>">
+      <%= image_tag "http://placehold.it/350x150&text=Logo" %>
+    </a>
     <p class="tagline">
       A crowd-sourced weather site for sharing forecasts & photos
     </p>
