--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,60 +1,78 @@
 <!-- app/views/cities/show.html.erb -->
 
-<h1 class="page-title">Current Weather in <%= @city.name %></h1>
+<div class="content city-weather">
 
-<p>
-  <%= insert_approriate_favorite_city_button(@city.id) if signed_in? %>
-</p>
+<header>
+  <a href="<%= root_url %>"><%= image_tag "http://placehold.it/350x150&text=Logo", class: "logo" %></a>
+  <h1 class="page-title">Current Weather in <%= @city.name %></h1>
+  <nav>
+    <%= render "layouts/navigation_bar_signed_in" if signed_in? %>
+    <%= render "layouts/navigation_bar_not_signed_in" if !signed_in? %>
+  </nav>
+</header>
 
-<section class="current-conditions">
-  <h2 class="section-title">Current Conditions</h2>
-  <p><%= @current_temperature %></p>
 
-  <table>
-    <tr>
-      <th>Condition</th>
-      <th></th>
-    </tr>
+<section class="main-columns">
+  <section class="city-picker">
+    <%= render "cities/city_picker", cities: @cities %>
+  </section>
 
-    <% @weather_condition_frequencies.each do |condition| %>
-    <tr>
-      <td><%= condition[0] %></td>
-      <td><%= number_to_percentage(condition[1], precision: 0) %></td>
-    </tr>
-    <% end %>
+  <section class="middle-column">
+    <section class="current-conditions">
+      <h2 class="section-title">Current Conditions</h2>
+      <p><%= @current_temperature %></p>
 
-  </table>
+      <table>
+        <tr>
+          <th>Condition</th>
+          <th></th>
+        </tr>
+
+        <% @weather_condition_frequencies.each do |condition| %>
+        <tr>
+          <td><%= condition[0] %></td>
+          <td><%= number_to_percentage(condition[1], precision: 0) %></td>
+        </tr>
+        <% end %>
+
+      </table>
+    </section>
+
+    <section class="recent-reports">
+      <h2 class="section-title">Latest Reports</h2>
+      <table>
+        <tr>
+          <th>Temperature</th>
+          <th>Condition</th>
+          <th>Submission Time</th>
+        </tr>
+
+        <% @recent_reports.take(10).each do |report| %>
+        <tr>
+          <td><%= report.temperature %></td>
+          <td><%= report.weather_condition.description %></td>
+          <td><%= friendly_time_format(report.created_at) %></td>
+        </tr>
+        <% end %>
+
+      </table>
+    </section>
+  </section>
+
+  <section class="right-column">
+    <p>
+      <%= link_to "New Report for #{@city.name}", new_weather_report_url(city_id: @city.id) %>
+    </p>
+
+    <p>
+      <%= insert_approriate_favorite_city_button(@city.id) if signed_in? %>
+    </p>
+
+    <section class="recent-photos">
+      <h2 class="section-title"><%= link_to "Latest Photos", city_gallery_url(@city) %></h2>
+      <%= render "photos/photo_list_minimal_caption", photos: @photos %>
+    </section>
+  </section>
 </section>
 
-<section class="recent-reports">
-  <h2 class="section-title">Latest Reports</h2>
-  <table>
-    <tr>
-      <th>Temperature</th>
-      <th>Condition</th>
-      <th>Submission Time</th>
-    </tr>
-
-    <% @recent_reports.take(10).each do |report| %>
-    <tr>
-      <td><%= report.temperature %></td>
-      <td><%= report.weather_condition.description %></td>
-      <td><%= friendly_time_format(report.created_at) %></td>
-    </tr>
-    <% end %>
-
-  </table>
-</section>
-
-<section class="recent-photos">
-  <h2 class="section-title"><%= link_to "Latest Photos", city_gallery_url(@city) %></h2>
-  <%= render "photos/last_four_photos", photos: @photos %>
-</section>
-
-<p>
-  <%= link_to "New Report for #{@city.name}", new_weather_report_url(city_id: @city.id) %>
-</p>
-
-<p>
-  <%= link_to "Cities Index", cities_url %>
-</p>
+</div>
