--- a/app/views/galleries/_user_details.html.erb
+++ b/app/views/galleries/_user_details.html.erb
@@ -7,7 +7,7 @@
 </p>
 
 <p>
-  <%= link_to city_url(user.home_city_id), user.home_city.name %>
+  <%= link_to user.home_city.name, city_url(user.home_city_id) %>
 </p>
 
 <p>
