--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,5 +1,29 @@
 <!-- /app/views/photos/new.html.erb -->
 
-<h1>Add A Photo</h1>
 
-<%= render "details", mode: :new, cities: @cities, photo: @photo %>
+<div class="content new-session">
+
+<header>
+  <a href="<%= root_url %>"><%= image_tag "http://placehold.it/350x150&text=Logo", class: "logo" %></a>
+  <h1 class="page-title">Add A Photo</h1>
+  <nav>
+    <%= render "layouts/navigation_bar_signed_in" if signed_in? %>
+    <%= render "layouts/navigation_bar_not_signed_in" if !signed_in? %>
+  </nav>
+</header>
+
+
+<section class="main-columns">
+  <section class="city-picker">
+    <%= render "cities/city_picker", cities: @cities %>
+  </section>
+
+  <section class="middle-column">
+    <section class="new-photo-form">
+      <%= render "details", mode: :new, cities: @cities, photo: @photo %>
+    </section>
+  </section>
+</div>
+
+
+<h1>Add A Photo</h1>
