--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,32 @@
-<!-- app/view/users/show.html.erb -->
+<!-- app/view/users/edit.html.erb -->
 
-<h1>Settings</h1>
+<div class="content user-edit">
 
-<%= render 'details', mode: :edit %>
+<header>
+  <a href="<%= root_url %>"><%= image_tag "http://placehold.it/350x150&text=Logo", class: "logo" %></a>
+  <h1 class="page-title">Settings</h1>
+  <nav>
+    <%= render "layouts/navigation_bar_signed_in" if signed_in? %>
+    <%= render "layouts/navigation_bar_not_signed_in" if !signed_in? %>
+  </nav>
+</header>
 
-<p>
-  <%= button_to "Delete Account", user_url(@user), method: :delete %>
-</p>
+
+<section class="main-columns">
+  <section class="city-picker">
+    <%= render "cities/city_picker", cities: @cities %>
+  </section>
+
+  <section class="middle-column">
+    <section class="user-edit-form">
+      <%= render 'details', mode: :edit %>
+
+      <p>
+        <%= button_to "Delete Account", user_url(@user), method: :delete %>
+      </p>
+    </section>
+  </section>
+</div>
+
+
+
