--- a/app/views/weather_reports/_new.html.erb
+++ b/app/views/weather_reports/_new.html.erb
@@ -1,6 +1,6 @@
 <!-- app/views/weather_reports/_new.html.erb -->
 
-<h1>How is the weather?</h1>
+<h2 class="section-title">How is the weather?</h2>
 
 <form action="<%= weather_reports_url %>" method="post">
 
