--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,4 +28,12 @@ body {
   font-family:Helvetica, sans-serif;
 }
 
+.content {
+  width:900px;
+  margin-top: 50px;
+  margin-left:auto;
+  margin-right:auto;
+  border: 1px solid #999;
+  line-height:140%;
+}
 
