--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -1,68 +1,34 @@
 <!-- /app/views/galleries/show.html.erb -->
-<section class="photo-gallery">
-  <h1>Weather Photos for: <%= @name %></h1>
 
-  <ul>
-    <% @photos.each do |photo| %>
-    <li>
-      <a href="<%= photo_url(photo) %>">
-        <%= image_tag photo.image.url(:small) %>
-      </a>
-      <figcaption>
-        <p>
-          <a href="<%= user_gallery_url(photo.submitter) %>"><%= image_tag photo.submitter.avatar.url(:thumbnail), class: "avatar" %></a>
+<div class="content photo-gallery">
 
-          <a href="<%= user_url(photo.submitter) %>">
-            <%= photo.submitter.user_name %></a>
+<header>
+  <a href="<%= root_url %>"><%= image_tag "http://placehold.it/350x150&text=Logo", class: "logo" %></a>
+  <h1 class="page-title">Weather Photos for: <%= @name %></h1>
+  <nav>
+    <%= render "layouts/navigation_bar_signed_in" if signed_in? %>
+    <%= render "layouts/navigation_bar_not_signed_in" if !signed_in? %>
+  </nav>
+</header>
 
-          <%= time_ago_in_words(photo.created_at) %>
-        </p>
 
-        <p>
-          <%= photo.caption %>
-        </p>
+<section class="main-columns">
+  <section class="city-picker">
+    <%= render "cities/city_picker", cities: @cities %>
+  </section>
 
-        <p>
-          Tags:
-          <ul>
-            <% photo.tags.each do |tag| %>
-            <li><%= link_to tag.body, tag_gallery_url(tag) %></li>
-            <% end %>
-          </ul>
-        </p>
+  <section class="middle-column">
+    <section class="photo-feed">
+      <%= render "photos/full_feed", photos: @photos %>
+    </section>
+  </section>
 
-        <p>
-          Comments:
-          <ul>
-            <% photo.comments.each do |comment| %>
-            <li><%= link_to comment.author.user_name, user_gallery_url(comment.author) %>: <%= comment.body %></li>
-            <% end %>
-          </ul>
-        </p>
+  <section class="right-column">
+    <section class="user-profile-box">
+      <%= (render "user_details", user: @subject) if @subject.is_a?(User) %>
+      <%= (render "city_details", city: @subject) if @subject.is_a?(City) %>
+    </section>
+  </section>
+</div>
 
-        <p>
-          <form action="<%= photo_comments_url(photo) %>" method="post">
-            <%= insert_form_authenticity_token %>
-            <p>
-              <label for="comment">Add a Comment:</label>
-              <textarea name="comment[body]" id="comment"></textarea>
-            </p>
 
-            <p><input type="submit" value="Post"></p>
-          </form>
-        </p>
-      </figcaption>
-
-      <br>
-      <br>
-      <br>
-      <br>
-    </li>
-    <% end %>
-  </ul>
-</section>
-
-<section class="user-profile-box">
-  <%= (render "user_details", user: @subject) if @subject.is_a?(User) %>
-  <%= (render "city_details", city: @subject) if @subject.is_a?(City) %>
-</section>
