--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,29 +8,31 @@
 </head>
 <body>
 
-  <!-- <p>params: <%#= params %></p>
-  <p>session: <%#= session %></p> -->
-
-  <%= "<p>errors: #{flash[:errors]} </p>".html_safe if flash[:errors] %>
-  <%= "<p>notice: #{flash[:notice]} </p>".html_safe if flash[:notice] %>
-
-  <!-- <p>
-    <% if signed_in? %>
-      Currently logged in as:
-      <br>
-      <%= image_tag current_user.avatar.url(:thumbnail) %>
-      <br>
-      <%= link_to current_user.user_name, user_url(current_user) %>
-      <br>
-      <%= link_to "Settings", edit_user_url(current_user) %>
-      <%= button_to "Sign Out", session_url, method: :delete %>
-    <% else %>
-      <%= link_to "Sign In", new_session_url %> or <%= link_to "Sign Up", new_user_url %>
-    <% end %>
-  </p> -->
 
 
 <%= yield %>
+
+
+<!-- <p>params: <%= params %></p>
+<p>session: <%= session %></p> -->
+
+<%= "<p>errors: #{flash[:errors]} </p>".html_safe if flash[:errors] %>
+<%= "<p>notice: #{flash[:notice]} </p>".html_safe if flash[:notice] %>
+
+<!-- <p>
+  <% if signed_in? %>
+    Currently logged in as:
+    <br>
+    <%= image_tag current_user.avatar.url(:thumbnail) %>
+    <br>
+    <%= link_to current_user.user_name, user_url(current_user) %>
+    <br>
+    <%= link_to "Settings", edit_user_url(current_user) %>
+    <%= button_to "Sign Out", session_url, method: :delete %>
+  <% else %>
+    <%= link_to "Sign In", new_session_url %> or <%= link_to "Sign Up", new_user_url %>
+  <% end %>
+</p> -->
 
 </body>
 </html>
