--- a/app/views/users/_details.html.erb
+++ b/app/views/users/_details.html.erb
@@ -93,7 +93,7 @@
       Favorite Users:
       <br>
       <input type="hidden" name="user[favorited_user_ids][]" value=" ">
-      <% @users.each do |user| %>
+      <% @other_users.each do |user| %>
       <input
         type="checkbox"
         name="user[favorited_user_ids][]"
