Adds page numbers to dashboard and gallery views.

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -27,7 +27,9 @@
 
     <section class="photo-feed">
       <h2 class="section-title">Weather Photos</h3>
-      <%= render "photos/full_feed", photos: @photos %>
+        <%= render "photos/full_feed", photos: @photos %>
+
+        <%= paginate @photos %>
     </section>
   </section>
 
