--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -19,11 +19,18 @@
 
   <section class="middle-column">
     <section class="photo-feed">
-      <%= render "photos/full_feed", photos: @photos %>
-
       <% if @photos.nil? || @photos.length == 0 %>
         This user hasn't uploaded any photos yet.
+      <% else %>
+
+        <%= paginate @photos %>
+
+        <%= render "photos/full_feed", photos: @photos %>
+
+        <%= paginate @photos %>
+
       <% end %>
+
     </section>
   </section>
 
