--- a/app/views/cities/search.html.erb
+++ b/app/views/cities/search.html.erb
@@ -4,7 +4,7 @@
 
 <header>
   <a href="<%= root_url %>"><%= image_tag "http://placehold.it/350x150&text=Logo", class: "logo" %></a>
-  <h1 class="page-title">Search Results for <%= @search_query %></h1>
+  <h1 class="page-title">Search Results for &ldquo;<%= @search_query %>&rdquo;</h1>
   <nav>
     <%= render "layouts/navigation_bar_signed_in" if signed_in? %>
     <%= render "layouts/navigation_bar_not_signed_in" if !signed_in? %>
