--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="content cities-index">
 
-<header>
+<header class="group">
   <section class="logo-and-tagline">
     <a href="<%= root_url %>">
       <%= image_tag "http://placehold.it/350x150&text=Logo" %>
