--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -21,10 +21,9 @@
     <section class="current-conditions">
       <h2 class="section-title">Current Conditions</h2>
 
-      <figure class="current-weather-icon">
-        <%= image_tag top_weather_condition_icon(@city).url(:thumbnail) %>
-      </figure>
-      <p><%= @current_temperature %></p>
+
+      <%= image_tag top_weather_condition_icon(@city).url(:thumbnail), class: "current-weather-icon" %>
+      <em><%= @current_temperature %>&deg; F</em>
 
       <table class="percentages">
         <% @weather_condition_frequencies.each do |condition| %>
@@ -48,7 +47,7 @@
 
         <% @recent_reports.take(10).each do |report| %>
         <tr>
-          <td><%= report.temperature %></td>
+          <td><%= report.temperature %>&deg; F</td>
           <td><%= report.weather_condition.description %></td>
           <td><%= friendly_time_format(report.created_at) %></td>
         </tr>
