--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -20,7 +20,7 @@
   </section>
 
   <section class="middle-column">
-    <section>
+    <section class="home-city-weather">
       <h2 class="section-title">My Weather</h3>
       <%= render "cities/current_weather_summary", city: current_user.home_city %>
     </section>
