Adds colors and button styles

--- a/app/assets/stylesheets/cities/index.css
+++ b/app/assets/stylesheets/cities/index.css
@@ -1,4 +1,4 @@
-/* /app/assets/stylesheets/cities_index.css */
+/* -------- /app/assets/stylesheets/cities/index.css --------- */
 
 .cities-index
   header {
