--- a/app/assets/stylesheets/users/dashboard.css
+++ b/app/assets/stylesheets/users/dashboard.css
@@ -1,3 +1,14 @@
-/* /app/assets/stylesheets/dashboard.css */
+/* -------- /app/assets/stylesheets/users/dashboard.css ---------- */
 
+h1.page-title {
+
+}
+
+/*------------- MY HOME CITY WEATHER IN CENTER COLUMN ---------------- */
+
+
+/*------------- FAVORITE PLACES SIDEBAR ---------------- */
+
+
+/*------------- NEW WEATHER REPORT SIDEBAR ---------------- */
 
