--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -40,6 +40,23 @@ display: block;
 -webkit-margin-start: 0;
 -webkit-margin-end: 0;
 }
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="submit"] {
+  -webkit-appearance: none;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  background: transparent;
+  color: inherit;
+  font: inherit;
+  width: auto;
+}
+
 /* - - - - IMPORT PAGE STYLES - - - - */
 @import 'basic_layout';
 @import 'cities/index';
