--- a/app/assets/stylesheets/basic_layout.css
+++ b/app/assets/stylesheets/basic_layout.css
@@ -4,15 +4,19 @@
 body {
   font-family:Helvetica, sans-serif;
   padding-top:1px;
+  background:#5ca7ba;
 }
 
 .content {
-  width:900px;
-  padding-top: 49px;
+  width:950px;
+  padding-top: 0px;
   margin-left:auto;
   margin-right:auto;
 /*  border: 1px solid #999;*/
   line-height:140%;
+  background:#FFFFFF;
+  padding-left:0px;
+  padding-right:0px;
 }
 
 img.avatar {
@@ -41,7 +45,10 @@ img.content-photo {
 header {
   display:block;
   position:relative;
+  padding-top:50px;
   margin-bottom:50px;
+  background:#ba6f5c;
+  color:#FFFFFF;
 }
 
 header a {
@@ -56,7 +63,7 @@ header img.logo {
 header h1.page-title {
   display:inline-block;
   float:left;
-  width:200px;
+  width:240px;
   margin-left: 50px;
   font-size:18px;
   padding-top:75px;
@@ -80,6 +87,8 @@ header nav li {
   display:block;
   position:relative;
   margin-bottom:50px;
+  padding-left:20px;
+  padding-right:20px;
 }
 
 .main-columns:after {
@@ -156,4 +165,53 @@ header nav li {
   display:block;
   float:left;
   width:200px;
+}
+
+
+/*------------- JONATHAN'S FORM STYLES --------------*/
+
+.input {
+  margin: 20px 0;
+}
+
+.input > label {
+  display: block;
+  font-weight: bold;
+  padding: 0 0 5px 0;
+}
+
+.input > input {
+  border: 2px solid #000;
+  padding: 5px 10px;
+/*  width: 250px;*/
+  border-radius: 5px;
+  background:#ffffff;
+}
+
+.input > input:focus {
+  border-color: #0b0;
+}
+
+input.submit {
+  background: #a7ba5c;
+  color:black;
+}
+
+.submit > input {
+  position: relative;
+  background: #a7ba5c;
+  color: #fff;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 3px #070;
+}
+
+.submit > input:hover {
+  background: #0b0;
+}
+
+.submit > input:active {
+  top: 3px;
+  box-shadow: none;
 }
