--- a/app/views/cities/_city_picker.html.erb
+++ b/app/views/cities/_city_picker.html.erb
@@ -7,12 +7,12 @@
 
 - or -
 
-<form action="<%= search_cities_url %>" method="get">
+<form action="<%= search_cities_url %>" method="get" class="input">
 
   <%= insert_form_authenticity_token %>
 
   <label for="search_query">Search by City</label>
   <input type="text" name="search_query" value="" id="search_query">
 
-  <p><input type="submit" value="Search"></p>
+  <input class="submit" type="submit" value="Search">
 </form>
