--- a/app/views/weather_reports/_new.html.erb
+++ b/app/views/weather_reports/_new.html.erb
@@ -2,20 +2,20 @@
 
 <h2 class="section-title">How is the weather?</h2>
 
-<form action="<%= weather_reports_url %>" method="post">
+<form class="input" action="<%= weather_reports_url %>" method="post">
 
   <%= insert_form_authenticity_token %>
 
-  <p>
+
     <label for="temperature">Temperature</label>
     <input
       type="text"
       name="weather_report[temperature]"
       value="<%= @weather_report.try(&:temperature) %>"
       id="temperature">
-  </p>
 
-  <p>
+
+
     <label for="condition">Condition</label>
     <select name="weather_report[weather_condition_id]" id="condition">
       <% weather_conditions.each do |condition| %>
@@ -26,9 +26,9 @@
         </option>
       <% end %>
     </select>
-  </p>
 
-  <p>
+
+
     <label for="city">City</label>
     <select name="weather_report[city_id]" id="city">
       <% cities.each do |city| %>
@@ -39,7 +39,7 @@
         </option>
       <% end %>
     </select>
-  </p>
 
-  <p><input type="submit" value="Submit"></p>
+
+  <input class="submit" type="submit" value="Submit">
 </form>
